--- a/finance/finance-datareader.ipynb
+++ b/finance/finance-datareader.ipynb
@@ -3,19 +3,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce8de42-0b44-46de-9aae-9f5e806ae1c9",
+   "id": "2fca09a9-e21c-43f8-8960-9aedcae6f043",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting finance-datareader\n",
+      "  Downloading finance_datareader-0.9.93-py3-none-any.whl (88 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m89.0/89.0 KB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting pandas>=0.19.2\n",
+      "  Downloading pandas-2.2.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (13.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.0/13.0 MB\u001b[0m \u001b[31m84.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: lxml in /usr/lib/python3/dist-packages (from finance-datareader) (4.8.0)\n",
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.66.5-py3-none-any.whl (78 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.4/78.4 KB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests>=2.3.0 in ./venv/lib/python3.10/site-packages (from finance-datareader) (2.32.3)\n",
+      "Collecting requests-file\n",
+      "  Downloading requests_file-2.1.0-py2.py3-none-any.whl (4.2 kB)\n",
+      "Requirement already satisfied: pytz>=2020.1 in ./venv/lib/python3.10/site-packages (from pandas>=0.19.2->finance-datareader) (2023.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in ./venv/lib/python3.10/site-packages (from pandas>=0.19.2->finance-datareader) (2.9.0.post0)\n",
+      "Collecting numpy>=1.22.4\n",
+      "  Downloading numpy-2.1.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.3/16.3 MB\u001b[0m \u001b[31m34.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting tzdata>=2022.7\n",
+      "  Downloading tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m345.4/345.4 KB\u001b[0m \u001b[31m35.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: urllib3<3,>=1.21.1 in ./venv/lib/python3.10/site-packages (from requests>=2.3.0->finance-datareader) (2.2.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in ./venv/lib/python3.10/site-packages (from requests>=2.3.0->finance-datareader) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in ./venv/lib/python3.10/site-packages (from requests>=2.3.0->finance-datareader) (3.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in ./venv/lib/python3.10/site-packages (from requests>=2.3.0->finance-datareader) (2024.8.30)\n",
+      "Requirement already satisfied: six>=1.5 in ./venv/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas>=0.19.2->finance-datareader) (1.16.0)\n",
+      "Installing collected packages: tzdata, tqdm, numpy, requests-file, pandas, finance-datareader\n",
+      "\u001b[33m  WARNING: The script tqdm is installed in '/home/aimmodev/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33m  WARNING: The scripts f2py and numpy-config are installed in '/home/aimmodev/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+      "\u001b[0mSuccessfully installed finance-datareader-0.9.93 numpy-2.1.1 pandas-2.2.2 requests-file-2.1.0 tqdm-4.66.5 tzdata-2024.1\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install finance-datareader plotly numpy mathplot matplotlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7c9b871-b7a2-4e6e-8f1b-d28709188a2e",
+   "execution_count": 10,
+   "id": "8e964c80-e398-46e4-badf-b7c53fbd3696",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "posix\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import FinanceDataReader as fdr\n",
@@ -25,10 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "750dffe5-9350-4e4b-89b4-fc35e45c3060",
+   "execution_count": 11,
+   "id": "44834830-d076-450a-b6ae-d357a3028934",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 001 2020-01-01 00:00:00 2021-12-31 00:00:00\n",
+      "1 001 2022-01-01 00:00:00 2023-12-31 00:00:00\n",
+      "1 001 2024-01-01 00:00:00 2025-12-31 00:00:00\n",
+      "1 001 2022-01-01 00:00:00 2023-12-31 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# KOSPI Index 코스피 지수 데이터 \n",
     "df = fdr.DataReader('KS11', '2020') # 2020-01-01 ~ 현재\n",
@@ -37,10 +96,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "544d08c8-5369-4208-8c30-60055598ede9",
+   "execution_count": 12,
+   "id": "99c85d9a-1f72-4f23-89c4-25e8a95f70f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 001 2001-06-11 00:00:00 2003-06-10 00:00:00\n",
+      "1 001 2003-06-11 00:00:00 2005-06-10 00:00:00\n",
+      "1 001 2005-06-11 00:00:00 2007-06-10 00:00:00\n",
+      "1 001 2007-06-11 00:00:00 2009-06-10 00:00:00\n",
+      "1 001 2009-06-11 00:00:00 2011-06-10 00:00:00\n",
+      "1 001 2011-06-11 00:00:00 2013-06-10 00:00:00\n",
+      "1 001 2013-06-11 00:00:00 2015-06-10 00:00:00\n",
+      "1 001 2015-06-11 00:00:00 2017-06-10 00:00:00\n",
+      "1 001 2017-06-11 00:00:00 2019-06-10 00:00:00\n",
+      "1 001 2019-06-11 00:00:00 2021-06-10 00:00:00\n",
+      "1 001 2021-06-11 00:00:00 2023-06-10 00:00:00\n",
+      "1 001 2023-06-11 00:00:00 2025-06-10 00:00:00\n",
+      "2 001 2001-06-11 00:00:00 2003-06-10 00:00:00\n",
+      "2 001 2003-06-11 00:00:00 2005-06-10 00:00:00\n",
+      "2 001 2005-06-11 00:00:00 2007-06-10 00:00:00\n",
+      "2 001 2007-06-11 00:00:00 2009-06-10 00:00:00\n",
+      "2 001 2009-06-11 00:00:00 2011-06-10 00:00:00\n",
+      "2 001 2011-06-11 00:00:00 2013-06-10 00:00:00\n",
+      "2 001 2013-06-11 00:00:00 2015-06-10 00:00:00\n",
+      "2 001 2015-06-11 00:00:00 2017-06-10 00:00:00\n",
+      "2 001 2017-06-11 00:00:00 2019-06-10 00:00:00\n",
+      "2 001 2019-06-11 00:00:00 2021-06-10 00:00:00\n",
+      "2 001 2021-06-11 00:00:00 2023-06-10 00:00:00\n",
+      "2 001 2023-06-11 00:00:00 2025-06-10 00:00:00\n",
+      "1 028 2001-06-11 00:00:00 2003-06-10 00:00:00\n",
+      "1 028 2003-06-11 00:00:00 2005-06-10 00:00:00\n",
+      "1 028 2005-06-11 00:00:00 2007-06-10 00:00:00\n",
+      "1 028 2007-06-11 00:00:00 2009-06-10 00:00:00\n",
+      "1 028 2009-06-11 00:00:00 2011-06-10 00:00:00\n",
+      "1 028 2011-06-11 00:00:00 2013-06-10 00:00:00\n",
+      "1 028 2013-06-11 00:00:00 2015-06-10 00:00:00\n",
+      "1 028 2015-06-11 00:00:00 2017-06-10 00:00:00\n",
+      "1 028 2017-06-11 00:00:00 2019-06-10 00:00:00\n",
+      "1 028 2019-06-11 00:00:00 2021-06-10 00:00:00\n",
+      "1 028 2021-06-11 00:00:00 2023-06-10 00:00:00\n",
+      "1 028 2023-06-11 00:00:00 2025-06-10 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# KRX Indices 국내 지수 데이터\n",
     "df = fdr.DataReader('KS11') # KOSPI 지수 (KRX)\n",
@@ -50,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b6bd44a2-2f4a-48b2-89f4-5dfb19429c27",
+   "execution_count": 16,
+   "id": "69d78485-f697-48eb-a183-d38c42b9acf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dd52707-c7dc-4708-848f-015e88df2937",
+   "id": "3e247870-5b29-41e9-8aee-8b0dce77bcfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d010d2-b752-4d39-b127-6af94b7e9d8b",
+   "id": "a8b3b3f1-1718-459f-961c-958941ec8ac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4489588b-5a66-4676-bf16-3c73f35351d4",
+   "id": "f67db47d-04ac-4902-8d50-2a9719a46230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "667c929c-5310-41dc-be6b-0bca89df94c6",
+   "id": "89bd61e9-38be-44b5-81c6-17a80e2372c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcc4488e-0d4a-4cbc-80de-7ed04ce15d7d",
+   "id": "8d764f0f-7e86-4c94-bfe6-78a07dbf2b06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f5753b-c51f-471b-b7c6-44a826b72eba",
+   "id": "e1718fca-5170-462b-b40a-ee75e2fd6d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc312a8-6b54-4cfb-80c2-ba517dca329a",
+   "id": "d402daf3-90bf-4733-bc46-4c157b403bb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "659b221c-0710-43f9-811d-f43d169b63d4",
+   "id": "1b177f22-0eb9-4750-8c99-5e11434316e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4efbdd00-3adb-4e7e-a541-6cc5ab8e5e85",
+   "id": "d4c682a6-8320-4162-9456-93384d65c89c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e832f5-5a01-465a-9618-d45b143cfcdb",
+   "id": "91885e47-480f-44c5-989a-3185865e1bce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,23 +299,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae2f8b6e-63e6-4314-afa2-373dc06e0ce1",
+   "id": "5ca72390-2042-4070-83bd-69b22ae7aed5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 상품 선물 가격 데이터\n",
-    "df = fdr.DataReader('CL=F') # WTI유 선물 Crude Oil (NYMEX)\n",
-    "df = fdr.DataReader('BZ=F') # 브렌트유 선물 Brent Oil (NYMEX)\n",
-    "df = fdr.DataReader('NG=F') # 천연가스 선물 (NYMEX)\n",
-    "df = fdr.DataReader('GC=F') # 금 선물 (COMEX)\n",
-    "df = fdr.DataReader('SI=F') # 은 선물 (COMEX)\n",
-    "df = fdr.DataReader('HG=F') # 구리 선물 (COMEX)"
+    "# 환율: 여러 조합 가능(지원 심볼: ['KRW', 'EUR', 'CNY', 'JPY', 'CHF'])\n",
+    "df = fdr.DataReader('USD/KRW') # 달러 원화\n",
+    "df = fdr.DataReader('USD/EUR') # 달러 유로화\n",
+    "df = fdr.DataReader('USD/CNY') # 달러 위엔화\n",
+    "df = fdr.DataReader('CNY/KRW') # 위엔화 원화\n",
+    "df = fdr.DataReader('EUR/CNY') # 유로화 위엔화"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3eaa44-4ac6-4c87-8fbc-cf115327d098",
+   "id": "37604bb0-d8e5-438e-bf10-2f0ed30a5a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865f3d37-f1d4-41ea-a51a-7dd94d79f341",
+   "id": "3d54d550-12b5-4fcd-924a-fe43b01531c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54197408-3120-4fd0-b655-4f256a86c294",
+   "id": "720a3244-5e1b-418f-841a-1f59627f4080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c4acaa-4fae-49c1-bcd7-48e3edc6e324",
+   "id": "a4f90a45-90c6-4833-bddf-00042045e9fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "871d2cbd-1ec9-4fbb-ada4-0ea4d0af1856",
+   "id": "c154fcfb-e963-45e1-bbad-f4d25bfe26a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59547d5d-1471-4057-ae9a-a07c275b1196",
+   "id": "faf5fcef-9827-4269-934d-703b0def00ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ebb530-9594-40e7-a3d7-dae3c46b44ed",
+   "id": "71e5a970-7647-4784-bd17-0aaa346a87c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a743191-4bff-4074-95ec-73db8a330265",
+   "id": "e40d1380-f634-4a57-9c77-78134a48bd62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a0adda1-0f48-4d16-8871-c98c26756c2c",
+   "id": "3cf14d4d-17ea-4b33-b52d-7693f86ed1df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "000b3a7b-6b7e-4ecc-ba73-f574b1dd439d",
+   "id": "c3c734fd-b42e-4cab-bfac-dddc289a00a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da33c349-5649-4bb8-bc8e-d77fff24f1ca",
+   "id": "3b615c57-2afb-4c54-bc5c-713234c2c9ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d40071c3-9054-4145-b5f1-1dff25ac3343",
+   "id": "70dc3133-7df3-467c-8401-c840a36276d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72192ab0-af35-4251-acae-c68283dc8d4f",
+   "execution_count": 9,
+   "id": "a5096aab-6675-4687-9ef9-7aba8fd11e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,6 +479,14 @@
     "df = fdr.SnapDataReader('KRX/INDEX/STOCK/1028') # 코스피 200\n",
     "df = fdr.SnapDataReader('KRX/INDEX/STOCK/5106') # KRX ESG Leaders 150 테마 지수 구성종목"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9703f914-d8e5-4281-b738-03d8e1d7fe35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -396,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
