--- a/finance/mysql.ipynb
+++ b/finance/mysql.ipynb
@@ -179,13 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "f4fa6b94-1424-4d31-aac0-7a02ba5e9375",
    "metadata": {},
    "outputs": [],
    "source": [
     "def readers_2_stocks():\n",
-    "    from stock import Stock\n",
+    "    from model.stock import Stock\n",
     "    all_stocks = []\n",
     "    korea_markets = ['KOSPI-DESC', 'KOSDAQ-DESC', 'KONEX-DESC'] # KOSPI: 940 종목, KOSDAQ: 1,597 종목, KONEX: 126 종목\n",
     "    for market in korea_markets:\n",
