--- a/finance/exec_job_01.ipynb
+++ b/finance/exec_job_01.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "from util import get_yesterday, get_now\n",
     "from model.wanted_com import WantedCom\n",
-    "from util.wanted_com_util import get_wantedcoms"
+    "from service.wanted_com_util import get_wantedcoms"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "29bf7d65-5108-4378-95f4-3c94a6180916",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
       "\"1\", \"105560\", \" KB금융\", \" KOSPI\" <class 'model.wanted_com.WantedCom'>\n",
       "\"2\", \"139050\", \" BF랩스\", \" KOSDAQ\" <class 'model.wanted_com.WantedCom'>\n",
       "\"3\", \"006400\", \" 삼성SDI\", \" KOSPI\" <class 'model.wanted_com.WantedCom'>\n",
-      "[[{'Open': 77900, 'High': 78400, 'Low': 77300, 'Close': 77800, 'Volume': 855823, 'Change': -0.0012836970474967568}], [{'Open': 0, 'High': 0, 'Low': 0, 'Close': 2805, 'Volume': 0, 'Change': 0.0}], [{'Open': 368000, 'High': 371000, 'Low': 359000, 'Close': 363000, 'Volume': 281510, 'Change': -0.008196721311475419}]]\n"
+      "[[{'Open': 77900, 'High': 78400, 'Low': 77300, 'Close': 77800, 'Volume': 904919, 'Change': -0.0012836970474967568}], [{'Open': 0, 'High': 0, 'Low': 0, 'Close': 2805, 'Volume': 0, 'Change': 0.0}], [{'Open': 368000, 'High': 371000, 'Low': 359000, 'Close': 363500, 'Volume': 287136, 'Change': -0.006830601092896127}]]\n"
      ]
     }
    ],
