--- a/finance/job01_init.ipynb
+++ b/finance/job01_init.ipynb
@@ -12,7 +12,7 @@
     "from util import get_before_ndays\n",
     "from service.wanted_com_util import get_wantedcoms\n",
     "from service.fdr_svc import get_stock_info\n",
-    "from service.market_value import inset_market_values, inset_market_values"
+    "from service.market_value import inset_market_values, insert_market_values"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "for i in range(61, -1, -1):\n",
     "    pre, cur = get_before_ndays(i)\n",
     "    infos = get_stock_info(coms_list=coms_list, from_date=pre, end_date=cur)\n",
-    "    inset_market_values(infos)\n",
+    "    insert_market_values(infos)\n",
     "print('-----completed-----')"
    ]
   }
